assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
html {
	scroll-behavior: smooth;
	-webkit-overflow-scrolling: touch;
  }
  
  body {
	margin: 0;
	font-family: 'Nunito', sans-serif;
	font-size: 1rem;
	font-weight: 500;
	line-height: 1.5;
	color: #515d5f;
	background-color: #fff;
  }

  h2 {
	  font-size: 1.8rem;
  }

  /* Nav bar */
  
  .navbar-brand {
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 1.5px;
  margin: 10px 0 2px;
  color: #D05353 !important;
  }
  
  .navbar-brand {
	  font-size: 1.7rem;
	  font-weight: 600;
	  }
  
  .navbar-brand:hover {
	  color: #F9AB55 !important;
  }
  
  .nav-link {
  color:#D05353 !important;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 1.25rem;
  margin: 8px 2px 2px;
  } 
  
  .nav-item a:hover {
  color: #F9AB55 !important;
  }
 
 .navbar-toggler {
	 background-color: #fff;
    padding: .25rem .75rem;
    font-size: 1.25rem;
    line-height: 1;
    border: 2px solid #D05353 !important;
    border-radius: .25rem;
} 

.navbar-light {
	background-color: #fff !important;
}


  /* Rounded images */
  .image-fit-cover {
	  object-fit: cover;
  }
  
  /* Jumbotron  */
  
  #home-section {
	min-height: 60vh;
	width: 100%;
	background: linear-gradient(rgba(0.5,0.5,0.5,0.5), rgba(0.5,0.5,0.5,0.5)), url('../images/meditation.jpg') no-repeat center center;
	background-position: bottom;
	background-repeat: no-repeat;
	background-attachment: scroll;
	background-size: cover;
  }
  
   .jumbotron-custom {
  background-color: #ffffff00;
  color: white;
  }
  
  .jumbotron-content {
	background-color: transparent;
	margin-top: 2rem;
	-ms-flex-line-pack: center;
	align-content: center;
  }
  
  .jumbotron-content h1 {
	font-size: 2rem;
  }
  
  .jumbotron-button {
	margin-top: 30px;
	border: transparent;
  }
  
  /* colors, headings, buttons, spacing, divider */
  .section-heading {
	line-height: 1.4;
	color:#D05353;
}
/* --------------------------------------buttons */
  .btn-main-pink {
	  background-color: #D05353;
	  border-color: transparent;
	  color: #fff;
	  text-transform: uppercase;
	  letter-spacing: 2px;
	  padding: 15px 30px;
	  font-weight: 600;
	  }

	.btn-main-pink:hover {
	  background-color: #F9AB55;
	  border-color: transparent;
	  color: #D05353;
	  }

	  .btn-footer {
		background-color: #fff;
		border-color: transparent;
		color: #D05353;
		text-transform: uppercase;
		letter-spacing: 2px;
		padding: 15px 30px;
		font-weight: 600;
	}
	
	.btn-footer:hover {
		background-color: #F9AB55;
		border-color: transparent;
		color: #D05353;
	} 

/* -------------------------------------- dividers */
	  .divider-section-pink {
	  width: 25%;               
	  background: #D05353;
	  height: 2px;
	  margin-top: 1rem;
	  }
	  
	  .divider-section-white {
	  width: 25%;               
	  background: #fff;
	  height: 2px;
	  margin-top: 1rem;
	  }
  
	  .footer-divider {
	  width: 100%;
	  background: #fff;
	  height: 2px;
	  margin-top: 1rem;	
	  }

	  .divider-section-log-in {
		width:100%;
		background: #D05353;
		height: 2px;
		margin-top: 1rem;
	}
	  
	  /* about section */
	  
  .about-section {
  text-align: center;
  line-height: 1.4;
  } 
  
  /* how it works section */
  
  #works-section {
   background-color: #D05353;
   color: #fff;
  }
  
  .works-heading{
  font-weight: 400;
  line-height: 1.4;
  position: relative;
  }

  ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  }  
 
  /*-------------------------------- Meet the team section */
  
    .team-member {
	  margin-bottom: 3rem;
	  text-align: center;
	}
	.team-member img {
	  width: 14rem;
	  height: 14rem;
	  border: 0.5rem solid #D05353;
	}
	.team-member h4 {
	  margin-top: 1.5rem;
	  margin-bottom: 0;
	}
	
	.img-brand {
	  height: 2.75rem;
	} 
  
  
  /* --------------------------------------------Testinomials carousel */
  #testimonial-section{
	  background-color: #D05353;
	  color:#fff;
  }
  
  .col-center {
	  margin: 0 auto;
	  float: none !important;
  }
  
  .carousel .carousel-item {
	  color:#fff;
	  text-align: center;
	  overflow: hidden;
	  min-height: 290px;
  }
  .carousel .carousel-item .img-box {
	  width: 14rem;
	  height: 14rem;
	  margin: 0 auto;
	  border: 0.5rem solid #fff;
	  border-radius: 50%;
  }
  
  .carousel .img-box img {
	  width: 100%;
	  height: 100%;
	  display: block;
	  border-radius: 50%;
  }
  
  .carousel .testimonial {
	  padding: 30px 0 10px;
  }
  .carousel .overview {	
	  font-style: italic;
  }
  .carousel .overview b {
	  text-transform: uppercase;
  }
  .carousel-control-prev, .carousel-control-next {
	  width: 40px;
	  height: 40px;
	  margin-top: -20px;
	  top: 50%;
	  background: none;
  }
  .carousel-control-prev i, .carousel-control-next i {
	  font-size: 2.5rem;
	  line-height: 42px;
	  position: absolute;
	  display: inline-block;
	  color:#fff;
	  text-shadow: 0 3px 3px #e6e6e6, 0 0 0 #000;
  }
  .carousel-indicators {
	  bottom: -40px;
  }
  .carousel-indicators li, .carousel-indicators li.active {
	  width: 12px;
	  height: 12px;
	  margin: 1px 3px;
	  border-radius: 50%;
	  border: none;
  }
  .carousel-indicators li {	
	  background: #fff;
	  border-color: transparent;
	  box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
  }
  .carousel-indicators li.active {	
	  background: #fff;		
	  box-shadow: inset 0 2px 1px rgba(0,0,0,0.2);
  }
  
  /* footer */
  
  footer {
  padding-top: 30px;
  background-color: #D05353;
  color: #fff;
  }
  #email-address {
  color: #fff; 
}

  #phone-number-ire {
	  color: #fff;
  }
  #phone-number {
	color: #fff;
}

  /* social  */
	.social-networks {
	  text-align: center;
	}
	
	.social-networks > li {
	  display: inline;
	}
	
	.social-networks i {
	  font-size: 140%;
	  margin: 1%;
	  padding: 5%;
	  color: #fff;
	}
	.social-networks i:hover{
	  color: #F2B880;
	}
  
   /* login form */
  
  
  
  /* Gallery */
  
     #gallery-section {
	  min-height: 20em;
    }

    #gallery-section img {
	  object-fit: cover;
	  max-width:15em;
	  min-height: 20em;
     }
  
    #gallery-section .gallery-col {
	  background-size: cover;
	  height: 40em;
	  border: white;
	  border-style: solid;
  }
  
	#gallery-section #image-1 {
	  background-image: url('../images/gallery-4.jpg'); 
  }
    #gallery-section #image-2 {
	  background-image: url('../images/gallery-8.JPG'); 
  }
    #gallery-section #image-3 {
	  background-image: url('../images/gallery-7.JPG'); 
  }
    #gallery-section #image-4 {
	  background-image: url('../images/gallery-11.JPG'); 
  }  

  /* alert */
  .alert {
  background-color: #D05353;
  }
  
  .alert-heading {
	  color: #fff;
	  }
  
   .alert p {
	   color: #fff;
   }
  
  .free-trail-alert {
	  text-align: center;
  }

/* Modal */

  
/* Media querys */

@media (min-width: 576px) {
  #img-3 { display:none;
 }
}

@media (min-width: 768px) {
	#img-3 { display:none;
   }
  }

@media only screen and (max-width: 576px) {
	.log-in-center { text-align: center; }
}

